--- a/dsa-revision-website/package.json
+++ b/dsa-revision-website/package.json
@@ -21,8 +21,10 @@
         "format:check": "prettier --check ."
     },
     "dependencies": {
+        "@tailwindcss/vite": "^4.1.18",
         "react": "^19.2.0",
-        "react-dom": "^19.2.0"
+        "react-dom": "^19.2.0",
+        "tailwindcss": "^4.1.18"
     },
     "devDependencies": {
         "@eslint/js": "^9.39.1",
