--- a/dsa-revision-website/package.json
+++ b/dsa-revision-website/package.json
@@ -22,8 +22,10 @@
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.18",
+        "@types/react-syntax-highlighter": "^15.5.13",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
+        "react-syntax-highlighter": "^16.1.0",
         "tailwindcss": "^4.1.18"
     },
     "devDependencies": {
